[gd_scene load_steps=3 format=3 uid="uid://87bo6myal8vy"]

[ext_resource type="Script" uid="uid://s3jyd7cj88f3" path="res://script/level.gd" id="1_36wlx"]
[ext_resource type="Texture2D" uid="uid://toe7j2osc535" path="res://gambar/background.png" id="1_s4405"]

[node name="level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36wlx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -7.0
offset_top = -16.0
offset_right = 1163.0
offset_bottom = 657.0
texture = ExtResource("1_s4405")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 378.0
offset_top = 3.0
offset_right = 816.0
offset_bottom = 260.0
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PILIH LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 233.0
offset_right = 745.0
offset_bottom = 283.0
alignment = 1

[node name="satu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 30
text = "1"
icon_alignment = 1

[node name="dua" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 30
text = "2"
icon_alignment = 1

[node name="tiga" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 30
text = "3"
icon_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -523.0
offset_top = -86.0
offset_right = -393.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="kembali" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "KEMBALI"

[connection signal="pressed" from="VBoxContainer/satu" to="." method="_on__pressed"]
[connection signal="pressed" from="VBoxContainer/satu" to="." method="_on_satu_pressed"]
[connection signal="pressed" from="VBoxContainer/dua" to="." method="_on__pressed"]
[connection signal="pressed" from="VBoxContainer/dua" to="." method="_on_dua_pressed"]
[connection signal="pressed" from="VBoxContainer/tiga" to="." method="_on_tiga_pressed"]
[connection signal="pressed" from="VBoxContainer2/kembali" to="." method="_on_kembali_pressed"]
